SNIPPETS-65: Fixed within myUtils.class. Maybe wrapping the snioppet table within a div can be done in web service and technically should. But dont want to make web service more complex. Will take care later.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -366,3 +366,8 @@ input[type=text].date {
 .form .right_col {
     margin-left: 125px;
 }
+
+.snippet-container {
+	width: 600px;
+	overflow: auto;
+}
